<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:elevation="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:text="@string/pranav"
            android:padding="3dp"
            android:textSize="17sp"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/journal_image_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/d2" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/journal_title_list"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/journal_thought_list"
            android:text="@string/thoughts1"
            android:paddingTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="15dp"
            android:textSize="18sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/journal_timestamp_list"
            android:text="@string/date_created"
            android:textStyle="italic"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>